test/visibility/private/lydia/siblingSubmodule.good
siblingSubmodule.chpl:9: warning: Most visible 'child' is an inaccessible private symbol, defined at:
 siblingSubmodule.chpl:2
siblingSubmodule.chpl:9: error: Cannot find module 'child'
